# Postman-WABL

./: .gitignore  .pre-commit-config.yaml  README.md  config.toml.sample  credentials.json  data.csv.sample  main.py  pyproject.toml  requirements.txt
data/: people.csv  roh.csv
modules/: config.py  get_filled_template.py  logger.py  logos.py  send_email.py
templates/: Internal Double Delegate Missing.mjml  Internal Payment.mjml  Internal Payment.mjml.bak  arb temp.mjml.sample  base.mjml  base.mjml.sample
