[tool.poetry]
name = "KGSMUN Email Sender"
version = "0.1.0"
description = ""
authors = ["Rohail Faisal <r.baloch12832@kgs.edu.pk>"]
license = "GPL-3.0-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
rich = "^13.7.1"
pandas = "^2.2.2"
google-api-python-client = "^2.136.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
