[tool.poetry]
name = "Postman-WABL"
version = "1.0.0"
description = ""
authors = ["Rohail Faisal <rohailfaisal14@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
rich = "^13.7.1"
google-api-python-client = "^2.136.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
jinja2 = "^3.1.4"
bidict = "^0.23.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
